--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,8 +2,6 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -42,6 +40,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
+
+          <!--  <Button
+                android:id="@+id/btn_setting_map"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="S" />-->
+            <ImageButton
+                android:id="@+id/map_refresh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_popup_sync"
+                android:cropToPadding="false"
+                android:paddingLeft="10dp"
+                android:scaleType="fitXY"></ImageButton>
+
+            <ImageButton
+                android:id="@+id/map_clean"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_menu_delete"
+                android:cropToPadding="false"
+                android:paddingLeft="10dp"
+                android:scaleType="fitXY"></ImageButton>
         </LinearLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
